WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127943
REGRESSION (
r160628
): LLint does not appear to handle impure get own property properly
https://bugs.webkit.org/show_bug.cgi?id=127943
Summary
REGRESSION (r160628): LLint does not appear to handle impure get own property...
Oliver Hunt
Reported
2014-01-30 13:10:17 PST
If i have i disable the hits, then these tests fail: [121/318] js/dom/dfg-prototype-chain-caching-with-impure-get-own-property-slot-traps-5.html failed unexpectedly (text diff) [241/318] js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5.html failed unexpectedly (text diff) Which appears to be due to incorrect document lookup caching
Attachments
Patch
(1.82 KB, patch)
2014-02-07 11:53 PST
,
Oliver Hunt
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-01-30 13:30:25 PST
<
rdar://problem/15950313
>
Oliver Hunt
Comment 2
2014-02-07 11:53:17 PST
Created
attachment 223478
[details]
Patch
Ryosuke Niwa
Comment 3
2014-02-07 11:54:47 PST
Comment on
attachment 223478
[details]
Patch Thanks for the fix!
Oliver Hunt
Comment 4
2014-02-07 11:55:24 PST
Committed
r163639
: <
http://trac.webkit.org/changeset/163639
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug