REGRESSION (r160628): LLint does not appear to handle impure get own property properly https://bugs.webkit.org/show_bug.cgi?id=127943

Reviewed by Filip Pizlo.

Make sure the LLINT doesn't attempt to cache property
access on structures with impureGetOwnPropertySlot set.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/146411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163639 268f45cc-cd09-0410-ab3c-d52691b4dbfc